[package]
name = "embassy-usb-keyboard"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
publish = false

[dependencies]
embassy-executor = { workspace = true, default-features = false }
embassy-nrf = { workspace = true, default-features = false }
embassy-sync = { workspace = true }
embassy-time = { workspace = true, default-features = false }
embassy-usb = { workspace = true, features = ["usbd-hid"] }
riot-rs = { path = "../../src/riot-rs", features = [
  "time",
  "usb",
  "override-usb-config",
] }
riot-rs-boards = { path = "../../src/riot-rs-boards" }
static_cell = { workspace = true }
usbd-hid = { version = "0.6.1" }
