[package]
name = "embassy-usb-keyboard"
version = "0.1.0"
authors.workspace = true
license.workspace = true
edition.workspace = true
publish = false

[lints]
workspace = true

[dependencies]
embassy-nrf = { workspace = true, default-features = false }
embassy-sync = { workspace = true }
embassy-time = { workspace = true, default-features = false }
embassy-usb = { workspace = true, features = ["usbd-hid"] }
riot-rs = { path = "../../src/riot-rs", features = [
  "time",
  "usb",
  "override-usb-config",
] }
riot-rs-boards = { path = "../../src/riot-rs-boards" }
static_cell = { workspace = true }
usbd-hid = "0.8.2"
