[package]
name = "embassy-usb-keyboard"
version = "0.1.0"
authors.workspace = true
license.workspace = true
edition.workspace = true
publish = false

[lints]
workspace = true

[dependencies]
embassy-nrf = { workspace = true, default-features = false }
embassy-sync = { workspace = true }
embassy-usb = { workspace = true, features = ["usbd-hid"] }
ariel-os = { path = "../../src/ariel-os", features = [
  "time",
  "usb",
  "override-usb-config",
] }
ariel-os-boards = { path = "../../src/ariel-os-boards" }
static_cell = { workspace = true }
usbd-hid = "0.8.2"
