[package]
name = "gpio"
version = "0.1.0"
authors.workspace = true
license.workspace = true
edition.workspace = true
publish = false

[lints]
workspace = true

[dependencies]
embassy-futures = { workspace = true }
embassy-time = { workspace = true }
riot-rs = { path = "../../src/riot-rs", features = [
  "external-interrupts",
  "time",
] }
riot-rs-boards = { path = "../../src/riot-rs-boards" }
