[package]
name = "gpio"
version = "0.1.0"
license.workspace = true
edition.workspace = true
publish = false

[lints]
workspace = true

[dependencies]
embassy-futures = { workspace = true }
ariel-os = { path = "../../src/ariel-os", features = [
  "external-interrupts",
  "time",
] }
ariel-os-boards = { path = "../../src/ariel-os-boards" }
