[package]
name = "hello-world"
version = "0.1.0"
authors = ["Kaspar Schleiser <kaspar@schleiser.de>"]
edition = "2018"

[dependencies]
riot-rs-rt = { path = "../../riot-rs-rt" }
riot-rs-core = { path = "../../riot-rs-core" }
riot-build = { path = "../../riot-build", features = ["riot-rs-core"]}
boards = { path = "../../boards" }
