[package]
name = "hello-world"
version = "0.1.0"
authors = ["Kaspar Schleiser <kaspar@schleiser.de>"]
edition = "2021"
publish = false

[dependencies]
riot-rs-rt = { path = "../../src/riot-rs-rt" }
riot-rs-core = { path = "../../src/riot-rs-core" }
riot-build = { path = "../../src/riot-build", features = ["riot-rs-core"]}
riot-rs-boards = { path = "../../src/riot-rs-boards" }
