[package]
name = "example-random"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
publish = false

[dependencies]
# Enabling the feature "random" is somewhat redundant with laze.yml's selects:
# random, but helps with interactive tools.
riot-rs = { path = "../../src/riot-rs", features = ["threading", "random"] }
riot-rs-boards = { path = "../../src/riot-rs-boards" }

rand = { version = "0.8.5", default-features = false }
