[package]
name = "example-random"
version = "0.1.0"
license.workspace = true
edition.workspace = true
publish = false

[lints]
workspace = true

[dependencies]
# Enabling the feature "random" is somewhat redundant with laze.yml's selects:
# random, but helps with interactive tools.
ariel-os = { path = "../../src/ariel-os", features = ["random"] }
ariel-os-boards = { path = "../../src/ariel-os-boards" }
rand = { workspace = true }
