[package]
name = "example-random"
version = "0.1.0"
authors.workspace = true
license.workspace = true
edition.workspace = true
publish = false

[lints]
workspace = true

[dependencies]
# Enabling the feature "random" is somewhat redundant with laze.yml's selects:
# random, but helps with interactive tools.
ariel-os = { path = "../../src/ariel-os", features = ["random"] }
ariel-os-boards = { path = "../../src/ariel-os-boards" }

rand = { version = "0.8.5", default-features = false }
