[package]
name = "riot-app"
version = "0.1.0"
authors = ["Kaspar Schleiser <kaspar@schleiser.de>"]
edition = "2018"

[dependencies]
riot-rs-rt = { path = "../../src/riot-rs-rt" }
riot-rs-core = { path = "../../src/riot-rs-core" }
riot-rs-boards = { path = "../../src/riot-rs-boards" }
riot-build = { path = "../../src/riot-build", features = ["riot-app", "riot-rs-core"]}
