[package]
name = "rust-gcoap"
version = "0.1.0"
authors = ["Christian Amsüss <chrysn@fsfe.org>"]
edition = "2021"

publish = false

[dependencies]
riot-rs = { path = "../../src/riot-rs" }
riot-rs-boards = { path = "../../src/riot-rs-boards" }

riot-wrappers = { workspace = true, features = [
  "with_coap_message",
  "with_coap_handler",
] }

riot-sys = "^0.7"

coap-message-demos = { git = "https://gitlab.com/chrysn/coap-message-demos/", default-features = false }
coap-handler-implementations = "0.3"
riot-coap-handler-demos = { git = "https://gitlab.com/etonomy/riot-module-examples/", features = ["vfs"] }
